--- a/.github/workflows/complete-pipeline.yml
+++ b/.github/workflows/complete-pipeline.yml
@@ -18,7 +18,7 @@ jobs:
     needs: setup
     steps:
       - name: Start timer
-        run: echo "Start time: $(date)"
+        run: echo "Start time:" && date
       
       - name: Setup Node.js
         uses: actions/setup-node@v3
@@ -32,7 +32,7 @@ jobs:
         run: npx eslint .
       
       - name: End timer
-        run: echo "End time: $(date)"
+        run: echo "End time:" && date
 
   deploy:
     runs-on: ubuntu-latest
