feat: agregar script de inicialización de base de datos
- Crear init-db.js para inicializar tabla users
- Modificar backend/index.js para auto-crear tabla al iniciar
- Agregar comando npm run init-db
- Solución para inicializar DB sin shell de Render

--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "test": "echo \"No tests yet\" && exit 0",
     "lint": "echo \"No linter configured yet\" && exit 0",
     "prepare": "husky install",
-    "build": "cd backend && npm install",
-    "start": "cd backend && npm start"
+    "init-db": "node scripts/init-db.js"
   },
   "keywords": ["devops", "ci-cd", "docker", "kubernetes"],
   "author": "",
