fix: agregar configuración CORS completa para solucionar errores de cross-origin
- Instalar paquete cors en backend

- Configurar CORS con origin del frontend en Render

- Actualizar URL del backend en config.js del frontend

- Agregar SSL config para PostgreSQL en producción

--- a/.github/workflows/deploy-aws.yml
+++ b/.github/workflows/deploy-aws.yml
@@ -25,6 +25,6 @@ jobs:
       - name: Push Docker Image to ECR
         run: |
           aws ecr create-repository --repository-name myapp || true
-          aws ecr get-login-password | docker login --username AWS --password-stdin <aws_account_id>.dkr.ecr.us-east-1.amazonaws.com
-          docker tag myapp:latest <aws_account_id>.dkr.ecr.us-east-1.amazonaws.com/myapp:latest
-          docker push <aws_account_id>.dkr.ecr.us-east-1.amazonaws.com/myapp:latest
+          aws ecr get-login-password | docker login --username AWS --password-stdin ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.us-east-1.amazonaws.com
+          docker tag myapp:latest ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.us-east-1.amazonaws.com/myapp:latest
+          docker push ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.us-east-1.amazonaws.com/myapp:latest
