--- a/backend/package.json
+++ b/backend/package.json
@@ -1,18 +1,27 @@
 {
   "name": "crud-backend",
   "version": "1.0.0",
-  "description": "Backend API para gestión de usuarios",
+  "description": "Backend API for CRUD application",
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "test": "echo 'Add tests here'",
-    "lint": "eslint ."
+    "dev": "nodemon index.js",
+    "test": "echo \"Error: no test specified\" && exit 0"
   },
+  "keywords": [
+    "crud",
+    "api",
+    "express"
+  ],
+  "author": "",
+  "license": "MIT",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1",
-    "pg": "^8.7.3"
+    "pg": "^8.7.3",
+    "prom-client": "^14.2.0"
   },
   "devDependencies": {
-    "eslint": "^8.0.0"
+    "nodemon": "^2.0.15"
   }
 }
