feat: add automatic timestamp to user creation in backend
- Modify POST /users endpoint to automatically append timestamp to username
- Use Colombian locale (es-CO) for time formatting (HH:MM:SS)
- Implement 24-hour format for consistency
- Add input validation to prevent empty names in frontend
- Ensure all new users display with creation timestamp for better tracking
- Backend-side implementation ensures consistency across all API clients
- Improves user management by providing temporal context for each entry

Breaking change: All new users will now have automatic timestamp appended
Existing users (Arturo, Susana, Test Usuario 03:56:09) remain unchanged

--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "scripts": {
     "test": "echo \"No tests yet\" && exit 0",
     "lint": "echo \"No linter configured yet\" && exit 0",
-    "prepare": "husky install",
-    "init-db": "node scripts/init-db.js"
+    "prepare": "husky install"
   },
   "keywords": ["devops", "ci-cd", "docker", "kubernetes"],
   "author": "",
