docs: reorganización completa de documentación con READMEs comprehensivos
- Eliminados archivos .md obsoletos (CONFIGURAR_*, PROYECTO_FINAL_COMPLETO.md, REPORTE_*, docs/GRAFANA_*)
- Creado README.md completo para backend/ con endpoints, timestamps, Docker, deployment
- Creado README.md completo para frontend/ con React 18, axios, validación, Render config
- Creado README.md completo para infrastructure/ con Terraform, K8s, Prometheus queries
- Creado README.md para .github/workflows/ explicando los 8 workflows de CI/CD
- Creado README.md para scripts/ con init-db.js, verify-grafana.ps1, check-secrets.sh
- Actualizado README.md principal con arquitectura, TOC, URLs actualizadas, setup completo
- Agregado SUSTENTACION.md al .gitignore para evitar commits accidentales
- Estructura final: solo READMEs organizados por carpeta + templates de GitHub

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 How to Build a Production-Ready DevOps Pipeline with Free Tools.html
 
+# Documentación de sustentación (no commitear)
+SUSTENTACION.md
+
 # dependencies
 node_modules/
 /.pnp
