--- a/.github/workflows/complete-pipeline.yml
+++ b/.github/workflows/complete-pipeline.yml
@@ -1,61 +1,114 @@
-# Pipeline completo de CI/CD con optimizaciones
+# Pipeline completo automático - Se ejecuta en cada push a main
 name: Complete CI/CD Pipeline
 
 on:
   push:
-    branches:
-      - main
+    branches: [main]
+    paths:
+      - 'backend/**'
+      - 'frontend/**'
+      - '**/Dockerfile'
+      - 'package*.json'
+  workflow_dispatch:  # También permite ejecución manual
+    inputs:
+      environment:
+        description: 'Entorno de despliegue'
+        required: true
+        type: choice
+        options:
+          - development
+          - staging
+          - production
+        default: 'development'
+      skip_tests:
+        description: 'Saltar tests?'
+        required: false
+        type: boolean
+        default: false
+
+env:
+  NODE_VERSION: '18'
 
 jobs:
-  setup:
+  build-and-test:
     runs-on: ubuntu-latest
+    if: ${{ !inputs.skip_tests }}
+    
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
-
-  build:
-    runs-on: ubuntu-latest
-    needs: setup
-    steps:
-      - name: Start timer
-        run: echo "Start time:" && date
       
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '16'
+          node-version: ${{ env.NODE_VERSION }}
+          cache: 'npm'
       
-      - name: Install dependencies
-        run: npm install
+      - name: Install Backend Dependencies
+        working-directory: ./backend
+        run: npm ci --prefer-offline
       
-      - name: Run security scan
-        run: npx eslint .
+      - name: Run Backend Tests
+        working-directory: ./backend
+        run: npm test --if-present
+        continue-on-error: true
       
-      - name: End timer
-        run: echo "End time:" && date
+      - name: Install Frontend Dependencies
+        working-directory: ./frontend
+        run: npm ci --prefer-offline
+      
+      - name: Run Frontend Tests
+        working-directory: ./frontend
+        run: npm test --if-present
+        continue-on-error: true
+
+  security-scan:
+    runs-on: ubuntu-latest
+    needs: build-and-test
+    if: always()
+    
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+      
+      - name: Run Trivy vulnerability scanner
+        uses: aquasecurity/trivy-action@master
+        with:
+          scan-type: 'fs'
+          scan-ref: '.'
+          format: 'sarif'
+          output: 'trivy-results.sarif'
+      
+      - name: Upload Trivy results to GitHub Security
+        uses: github/codeql-action/upload-sarif@v2
+        if: always()
+        with:
+          sarif_file: 'trivy-results.sarif'
 
   deploy:
     runs-on: ubuntu-latest
-    needs: build
+    needs: [build-and-test, security-scan]
+    if: always()
+    
     steps:
-      - name: Setup K3d cluster
-        run: k3d cluster create dev-cluster --servers 1 --agents 2 --port 8080:80@loadbalancer
+      - name: Checkout code
+        uses: actions/checkout@v3
       
-      - name: Apply Kubernetes manifests
-        run: kubectl apply -f k8s/
+      - name: Deploy to ${{ inputs.environment }}
+        run: |
+          echo "Deploying to ${{ inputs.environment }} environment"
+          echo "Would trigger deployment to Render here"
+          # curl -X POST ${{ secrets.RENDER_DEPLOY_HOOK_URL }}
       
-      - name: Deploy app
-        run: kubectl rollout restart deployment/webapp
-
-  terraform:
-    runs-on: ubuntu-latest
-    needs: deploy
-    steps:
-      - name: Setup Terraform
-        uses: hashicorp/setup-terraform@v2
+      - name: Health Check
+        run: |
+          echo "Performing health check..."
+          # curl -f https://your-app.onrender.com/health || exit 1
       
-      - name: Terraform Init
-        run: terraform init
-      
-      - name: Terraform Apply
-        run: terraform apply -auto-approve
+      - name: Summary
+        run: |
+          echo "## 🚀 Deployment Summary" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          echo "- Environment: ${{ inputs.environment }}" >> $GITHUB_STEP_SUMMARY
+          echo "- Tests skipped: ${{ inputs.skip_tests }}" >> $GITHUB_STEP_SUMMARY
+          echo "- Commit: ${{ github.sha }}" >> $GITHUB_STEP_SUMMARY
