--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -1,14 +1,99 @@
-# Workflow para build de Docker images
-name: Docker Build
+# Docker Build automático - Se ejecuta al hacer push
+name: Docker Build & Push
+
 on:
   push:
     branches: [main]
+    paths:
+      - 'backend/**'
+      - 'frontend/**'
+      - '**/Dockerfile'
+  pull_request:
+    branches: [main]
+    paths:
+      - 'backend/**'
+      - 'frontend/**'
+      - '**/Dockerfile'
+  workflow_dispatch:  # También permite ejecución manual
+    inputs:
+      component:
+        description: 'Componente a construir'
+        required: true
+        type: choice
+        options:
+          - backend
+          - frontend
+          - both
+      push_to_hub:
+        description: 'Push a Docker Hub?'
+        required: true
+        type: boolean
+        default: false
+
+env:
+  DOCKER_BUILDKIT: 1
+  COMPOSE_DOCKER_CLI_BUILD: 1
+
 jobs:
   build:
     runs-on: ubuntu-latest
+    
     steps:
-      - uses: actions/checkout@v3
-      - name: Build Docker image
+      - name: Checkout code
+        uses: actions/checkout@v3
+      
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+      
+      - name: Determine components to build
+        id: components
         run: |
-          DOCKER_BUILDKIT=1 docker build -t crud-backend:latest ./backend
-          DOCKER_BUILDKIT=1 docker build -t crud-frontend:latest ./frontend
+          if [ "${{ github.event_name }}" == "workflow_dispatch" ]; then
+            echo "component=${{ inputs.component }}" >> $GITHUB_OUTPUT
+            echo "push_to_hub=${{ inputs.push_to_hub }}" >> $GITHUB_OUTPUT
+          else
+            # En push/PR automático, construir ambos componentes y pushear
+            echo "component=both" >> $GITHUB_OUTPUT
+            echo "push_to_hub=true" >> $GITHUB_OUTPUT
+          fi
+      
+      - name: Login to Docker Hub
+        if: steps.components.outputs.push_to_hub == 'true'
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      
+      - name: Build Backend
+        if: ${{ steps.components.outputs.component == 'backend' || steps.components.outputs.component == 'both' }}
+        uses: docker/build-push-action@v4
+        with:
+          context: ./backend
+          file: ./backend/Dockerfile
+          push: ${{ steps.components.outputs.push_to_hub == 'true' }}
+          tags: |
+            ${{ secrets.DOCKERHUB_USERNAME }}/crud-backend:latest
+            ${{ secrets.DOCKERHUB_USERNAME }}/crud-backend:${{ github.sha }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+      
+      - name: Build Frontend
+        if: ${{ steps.components.outputs.component == 'frontend' || steps.components.outputs.component == 'both' }}
+        uses: docker/build-push-action@v4
+        with:
+          context: ./frontend
+          file: ./frontend/Dockerfile
+          push: ${{ steps.components.outputs.push_to_hub == 'true' }}
+          tags: |
+            ${{ secrets.DOCKERHUB_USERNAME }}/crud-frontend:latest
+            ${{ secrets.DOCKERHUB_USERNAME }}/crud-frontend:${{ github.sha }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+      
+      - name: Summary
+        run: |
+          echo "## 🐳 Docker Build Summary" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          echo "- Component: ${{ steps.components.outputs.component }}" >> $GITHUB_STEP_SUMMARY
+          echo "- Pushed to Hub: ${{ steps.components.outputs.push_to_hub }}" >> $GITHUB_STEP_SUMMARY
+          echo "- Commit SHA: ${{ github.sha }}" >> $GITHUB_STEP_SUMMARY
