--- a/.github/workflows/zap-scan.yml
+++ b/.github/workflows/zap-scan.yml
@@ -1,19 +1,63 @@
-# Escaneo de seguridad con OWASP ZAP
-name: ZAP Scan
+# Escaneo de seguridad con OWASP ZAP - Optimizado
+name: OWASP ZAP Security Scan
 
 on:
-  push:
-    branches:
-      - main
+  workflow_dispatch:  # Solo ejecución manual
+    inputs:
+      target_url:
+        description: 'Target URL to scan'
+        required: true
+        default: 'https://crud-frontend-cerx.onrender.com'
+      scan_type:
+        description: 'Type of scan'
+        required: true
+        type: choice
+        options:
+          - baseline
+          - full
+        default: 'baseline'
+  schedule:
+    - cron: '0 10 * * 3'  # Miércoles a las 10 AM (semanal)
 
 jobs:
   zap-scan:
     runs-on: ubuntu-latest
+    
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
-
-      - name: Run ZAP security scan
-        uses: zaproxy/action-full-scan@v0.3.0
+      
+      - name: Run ZAP Baseline Scan
+        if: ${{ github.event.inputs.scan_type == 'baseline' || github.event.schedule != '' }}
+        uses: zaproxy/action-baseline@v0.7.0
         with:
-          target: 'https://tu-app-frontend.onrender.com'
+          target: ${{ github.event.inputs.target_url || 'https://crud-frontend-cerx.onrender.com' }}
+          rules_file_name: '.zap/rules.tsv'
+          cmd_options: '-a'
+      
+      - name: Run ZAP Full Scan
+        if: ${{ github.event.inputs.scan_type == 'full' }}
+        uses: zaproxy/action-full-scan@v0.7.0
+        with:
+          target: ${{ github.event.inputs.target_url || 'https://crud-frontend-cerx.onrender.com' }}
+          rules_file_name: '.zap/rules.tsv'
+          cmd_options: '-a'
+      
+      - name: Upload ZAP results
+        uses: actions/upload-artifact@v3
+        if: always()
+        with:
+          name: zap-scan-report-${{ github.event.inputs.scan_type || 'baseline' }}
+          path: report_html.html
+          retention-days: 30
+      
+      - name: Create scan summary
+        if: always()
+        run: |
+          echo "## 🔒 OWASP ZAP Security Scan Results" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          echo "**Target:** ${{ github.event.inputs.target_url || 'https://crud-frontend-cerx.onrender.com' }}" >> $GITHUB_STEP_SUMMARY
+          echo "**Scan Type:** ${{ github.event.inputs.scan_type || 'baseline' }}" >> $GITHUB_STEP_SUMMARY
+          echo "**Date:** $(date -u +"%Y-%m-%d %H:%M:%S UTC")" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          echo "📊 Full report available in artifacts" >> $GITHUB_STEP_SUMMARY
