fix: configure tests, Dockerfiles, and CI compatibility
- Backend: Update test script to pass in CI (remove error message)
- Backend: Add lint script for CI compatibility
- Backend: Add EXPOSE port 5000 in Dockerfile
- Backend: Add .dockerignore for optimized builds

- Frontend: Configure tests to pass in CI (CI=true, --passWithNoTests)
- Frontend: Add lint script for CI compatibility
- Frontend: Fix Dockerfile to use nginx for serving static files
- Frontend: Use correct build output directory (build/ not dist/)
- Frontend: Add .dockerignore for optimized builds
- Frontend: Add basic App.test.js

- Add workflow test report documenting automation verification

These changes should make all workflows pass successfully.

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -11,4 +11,5 @@ WORKDIR /app
 COPY --from=builder /app/package*.json ./
 RUN npm ci --production
 COPY --from=builder /app/*.js ./
+EXPOSE 5000
 CMD ["node", "index.js"]
