fix: add security-events permissions to workflows
Fixed 'Resource not accessible by integration' error.

Added permissions to workflows that upload SARIF to GitHub Security:

- complete-pipeline.yml: contents:read, security-events:write

- trivy-scan.yml: contents:read, security-events:write

--- a/.github/workflows/complete-pipeline.yml
+++ b/.github/workflows/complete-pipeline.yml
@@ -26,6 +26,10 @@ on:
         type: boolean
         default: false
 
+permissions:
+  contents: read
+  security-events: write  # Permite subir resultados de seguridad
+
 env:
   NODE_VERSION: '18'
 
